--- a/cdn/index.html
+++ b/cdn/index.html
@@ -1,14 +1,14 @@
 <html>
+  <head>
+    <script
+      src="https://code.jquery.com/jquery-3.7.1.slim.min.js"
+      integrity="sha256-kmHvs0B+OpCW5GVHUNjv9rOmY0IvSIRcf7zGUDTDQM8="
+      crossorigin="anonymous"
+    ></script>
+    <script src="./interval.js"></script>
+  </head>
 
-<head>
-    <script src="https://code.jquery.com/jquery-3.7.1.slim.min.js"
-        integrity="sha256-kmHvs0B+OpCW5GVHUNjv9rOmY0IvSIRcf7zGUDTDQM8=" crossorigin="anonymous"></script>
-    <script src="./timer.js"></script>
-
-</head>
-
-<body>
-
+  <body>
     <div id="counter"></div>
 
     <button id="start">Start/Unpause timer</button>
@@ -20,55 +20,42 @@
     <button id="restart">Restart timer</button>
 
     <script>
+      const interval = new Interval({
+        counter: "#counter",
+        delay: 1000,
+        duration: 1,
+        onStart: function () {
+          console.log("When started the interval");
+        },
+        onEnd: function () {
+          console.log("When ended the interval");
+        },
+        onPaused: function () {
+          console.log("When paused the interval");
+        },
+        onReset: function () {
+          console.log("When reseted the interval");
+        },
+        onRestart: function () {
+          console.log("When restarted the interval");
+        },
+      });
 
-        const interval = new Interval({
-            counter: '#counter',
-            delay: 1000,
-            duration: 1,
-            onStart: function () {
-                console.log('When started the interval');
-            },
-            onEnd: function () {
+      $("#start").on("click", function () {
+        interval.start();
+      });
 
-                console.log('When ended the interval');
-            },
-            onPaused: function () {
+      $("#pause").on("click", function () {
+        interval.pause();
+      });
 
-                console.log('When paused the interval');
-            },
-            onReset: function () {
+      $("#reset").on("click", function () {
+        interval.reset();
+      });
 
-                console.log('When reseted the interval');
-            },
-            onRestart: function () {
-
-                console.log('When restarted the interval');
-            }
-        });
-
-
-        $('#start').on('click', function () {
-
-            interval.start();
-        });
-
-        $('#pause').on('click', function () {
-
-            interval.pause();
-        });
-
-        $('#reset').on('click', function () {
-
-            interval.reset();
-        });
-
-        $('#restart').on('click', function () {
-
-            interval.restart();
-        });
-
+      $("#restart").on("click", function () {
+        interval.restart();
+      });
     </script>
-
-</body>
-
+  </body>
 </html>
